[package]
name = "acme-rs"
version = "0.3.0"
edition = "2021"
authors = ["pengh <qingseyunlan@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/penghcn/acme-rs"
description = """
A project to auto generate ssl certificate by acme.
"""
keywords = ["acme", "http", "crypt", "rust"]

[dependencies]
log = { version = "0.4", features = ["std"] }
chrono = "0.4"

base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

reqwest = "0.11" 
tokio = { version = "1.37", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

regex = "1"
